--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id("io.qameta.allure") version "2.11.2"
 }
 
 group 'org.example'
@@ -16,6 +17,12 @@ dependencies {
     implementation 'org.seleniumhq.selenium:selenium-http-jdk-client:4.9.1'
     testImplementation 'org.assertj:assertj-core:3.24.2'
     implementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'io.qameta.allure:allure-junit5:2.22.0'
+    testImplementation 'org.awaitility:awaitility:4.2.0'
+    implementation 'com.github.javafaker:javafaker:1.0.2'
+    compileOnly 'org.projectlombok:lombok:1.18.26'
+    annotationProcessor 'org.projectlombok:lombok:1.18.26'
+    implementation 'com.codeborne:selenide:6.14.0'
 }
 
 test {
